--- a/package.json
+++ b/package.json
@@ -1,41 +1,49 @@
 {
-  "name": "mw-bp-node-typescript",
-  "version": "1.0.0",
-  "description": "Boilerplate project for a Node.js backend with Typescript support.",
+  "name": "ics-server",
+  "version": "0.1.0",
+  "description": "ICS backend with Typescript support.",
   "main": "src/index.ts",
   "scripts": {
-    "start": "NODE_ENV=development node_modules/.bin/nodemon --exec 'yarn run lint && node_modules/.bin/ts-node src/index.ts'",
-    "debug": "NODE_ENV=development node_modules/.bin/nodemon --exec 'yarn run lint && node_modules/.bin/ts-node -d src/index.ts'",
-    "prod": "NODE_ENV=production node_modules/.bin/ts-node src/index.ts",
-    "lint": "node_modules/.bin/tslint 'src/**/*.ts' -t verbose --force",
-    "test": "node_modules/.bin/ts-node node_modules/.bin/tape './test/**/*.spec.ts' | tap-spec"
+    "start": "set NODE_ENV=development && nodemon --config ./nodemon.json --exec \"npm run lint && ts-node ./src/index.ts\"",
+    "debug": "set NODE_ENV=development && nodemon --exec 'npm run lint && ts-node -d ./src/index.ts'",
+    "prod": "set NODE_ENV=production ts-node src/index.ts",
+    "lint": "./node_modules/.bin/tslint './src/**/*.ts' -t verbose --force --type-check --project ./tsconfig.json",
+    "test": "ts-node ./node_modules/.bin/tape './test/**/*.spec.ts' | tap-spec"
   },
-  "author": "Tim Whitney",
-  "license": "MIT",
+  "author": "Ian Mackie",
+  "license": "CSS",
   "dependencies": {
-    "@types/body-parser": "^0.0.33",
-    "@types/express": "^4.0.32",
-    "@types/lodash": "^4.14.37",
-    "@types/node": "^6.0.45",
-    "@types/tape": "^4.2.28",
-    "body-parser": "^1.15.2",
-    "express": "^4.14.0",
-    "inversify": "^3.0.0-beta.1",
-    "iridium": "^7.0.0",
-    "lodash": "^4.16.4",
-    "reflect-metadata": "^0.1.8",
-    "sqlite3": "^3.1.7",
-    "typeorm": "^0.0.2-alpha.69",
-    "winston": "^2.2.0"
+    "body-parser": "^1.17.1",
+    "express": "^4.15.2",
+    "inversify": "^4.0.0",
+    "iridium": "^8.0.0-alpha.2",
+    "lodash": "^4.17.4",
+    "moment": "^2.18.1",
+    "reflect-metadata": "^0.1.10",
+    "restify": "^4.3.0",
+    "rxjs": "^5.4.0",
+    "socket.io": "^2.0.3",
+    "socket.io-parser": "^3.1.2",
+    "winston": "^2.3.1",
+    "winston-slack-hook": "^0.2.0"
   },
   "devDependencies": {
-    "@types/express": "4.0.32",
-    "@types/winston": "0.0.28",
+    "@types/bcrypt": "^1.0.0",
+    "@types/body-parser": "^0.0.33",
+    "@types/express": "^4.0.35",
+    "@types/lodash": "^4.14.63",
+    "@types/moment": "^2.13.0",
+    "@types/node": "^7.0.13",
+    "@types/passport-http": "^0.3.2",
+    "@types/restify": "^4.3.4",
+    "@types/socket.io": "^1.4.29",
+    "@types/tape": "^4.2.29",
+    "@types/winston": "2.3.1",
     "nodemon": "^1.11.0",
     "tap-spec": "^4.1.1",
-    "tape": "^4.6.2",
-    "ts-node": "^1.4.1",
-    "tslint": "^3.15.1",
-    "typescript": "^2.0.3"
+    "tape": "^4.6.3",
+    "ts-node": "^3.0.2",
+    "tslint": "^5.1.0",
+    "typescript": "^2.4.1"
   }
 }
